AEC3: Ensure that the usage of stationary signal properties is not unset

This CL ensures that the default setting for the usage of stationary signal
properties is not overridden by mistake.

Bug: chromium:894243
Change-Id: I85ab65383ee82b5f3153864da7a0cede7776c146
Reviewed-on: https://webrtc-review.googlesource.com/c/105181
Reviewed-by: Jesus de Vicente Pena <devicentepena@webrtc.org>
Commit-Queue: Per Åhgren <peah@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#25104}